# gnome-calendar

./: configure_meson  meson.build  meson_options.txt
data/: meson.build  meson_post_install.py
data/appdata/: meson.build
data/icons/: meson.build  meson_post_install.py
doc/reference/: meson.build
src/: gcal-utils.c  gcal-utils.h  meson.build
src/views/: gcal-year-view.c
