option('enable-nls', type: 'boolean', value: false, description: 'use Native Language Support')
option('enable-tracing', type: 'boolean', value: false, description: 'add extra debugging information')
option('enable-gtk-doc', type: 'boolean', value: false, description: 'use gtk-doc to build documentation')
